--- a/front/package.json
+++ b/front/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-scroll-lock": "^3.0.3",
     "core-js": "^3.6.4",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.7.1",
+    "simplebar-vue": "^2.0.0-beta.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
