--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "nodemailer": "^6.4.2",
         "nodemon": "*",
         "passport": "*",
-        "passport-jwt": "*"
+        "passport-jwt": "*",
+        "simplebar": "^6.0.0-beta.2"
     },
     "devDependencies": {}
 }
