--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^8.2.0",
         "ejs": "^3.0.1",
         "express": "^4.17.1",
+        "googleapis": "^61.0.0",
         "jsonwebtoken": "*",
         "mongoose": "*",
         "multer": "^1.4.2",
